# whatsapp-chat-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
tests/: test_activity.py  test_analysis_api.py  test_api.py  test_classifier.py  test_cli.py  test_config.py  test_content.py  test_detection.py  test_export.py  test_models.py  test_parser.py  test_statistics.py  test_transform.py
tests/fixtures/: android_it.txt  ios_en.txt
whatsapp_analyzer/: __init__.py  cli.py  config.py  exceptions.py  models.py
whatsapp_analyzer/analysis/: activity.py  base.py  content.py  statistics.py
whatsapp_analyzer/detection/: android.py  base.py  ios.py  registry.py
whatsapp_analyzer/export/: base.py  csv_exporter.py  dataframe_exporter.py  json_exporter.py
whatsapp_analyzer/parsing/: classifier.py  parser.py
whatsapp_analyzer/transform/: anonymizer.py  base.py  filters.py
