[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsapp-chat-analyzer"
version = "0.1.1"
description = "Parser e analisi per chat WhatsApp esportate in formato .txt"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "marco cerbella" }]
keywords = ["whatsapp", "chat", "parser", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mtmxo/whatsapp-chat-analyzer"
Repository = "https://github.com/mtmxo/whatsapp-chat-analyzer"
Issues = "https://github.com/mtmxo/whatsapp-chat-analyzer/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=7.0"]

[project.scripts]
wa-analyzer = "whatsapp_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["whatsapp_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
